force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Target_UI_Controller__mdt/Target_UI_Controller__mdt.object-meta.xml
<CustomObject>
    <description>Admin-maintained configuration for Target screen sections, row headings, ordering, editability, and formula help text.</description>
    <label>Target Screen Configuration</label>
    <pluralLabel>Target Screen Configurations</pluralLabel>
</CustomObject>