force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Target_UI_Controller__mdt/fields/Avg_Total_Tooltip__c.field-meta.xml
<CustomField>
    <fullName>Avg_Total_Tooltip__c</fullName>
    <label>Avg / Total Tooltip</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>