force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Target_UI_Controller__mdt/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <length>40</length>
    <type>Text</type>
</CustomField>