force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Target_UI_Controller__mdt/fields/Fill_Forward_On_Edit__c.field-meta.xml
<CustomField>
    <fullName>Fill_Forward_On_Edit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fill Forward On Edit</label>
    <type>Checkbox</type>
</CustomField>