force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Target_UI_Controller__mdt/fields/Formula_Key__c.field-meta.xml
<CustomField>
    <fullName>Formula_Key__c</fullName>
    <label>Formula Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>