force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Target_UI_Controller__mdt/fields/Formula_Tooltip__c.field-meta.xml
<CustomField>
    <fullName>Formula_Tooltip__c</fullName>
    <label>Formula Tooltip</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>