force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Target_UI_Controller__mdt/fields/Internal_Key__c.field-meta.xml
<CustomField>
    <fullName>Internal_Key__c</fullName>
    <label>Internal Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>