force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Target_UI_Controller__mdt/fields/Parameter_Driver__c.field-meta.xml
<CustomField>
    <fullName>Parameter_Driver__c</fullName>
    <label>Parameter/Driver</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>