force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Target_UI_Controller__mdt/fields/Section_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Section_Sequence__c</fullName>
    <label>Section Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>