force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Target_UI_Controller__mdt/fields/Source_Section__c.field-meta.xml
<CustomField>
    <fullName>Source_Section__c</fullName>
    <label>Source Section</label>
    <length>80</length>
    <type>Text</type>
</CustomField>