force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Target_UI_Controller__mdt/fields/Source_Value__c.field-meta.xml
<CustomField>
    <fullName>Source_Value__c</fullName>
    <label>Source Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>