force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Target_UI_Controller__mdt/fields/UI_Sequence__c.field-meta.xml
<CustomField>
    <fullName>UI_Sequence__c</fullName>
    <label>UI Sequence</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>