force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Target_UI_Controller__mdt/fields/Value_Type__c.field-meta.xml
<CustomField>
    <fullName>Value_Type__c</fullName>
    <label>Value Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>number</fullName>
                <default>true</default>
                <label>Number</label>
            </value>
            <value>
                <fullName>decimal</fullName>
                <label>Decimal</label>
            </value>
            <value>
                <fullName>percent</fullName>
                <label>Percent</label>
            </value>
            <value>
                <fullName>text</fullName>
                <label>Text</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>