force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Target_UI_Controller__mdt/listViews/Polymers_Op_Plan.listView-meta.xml
<ListView>
    <fullName>Polymers_Op_Plan</fullName>
    <columns>DeveloperName</columns>
    <columns>MasterLabel</columns>
    <columns>Sector__c</columns>
    <columns>Category__c</columns>
    <columns>Parameter_Driver__c</columns>
    <columns>Classification__c</columns>
    <columns>UI_Line_Type__c</columns>
    <columns>UI_Sequence__c</columns>
    <columns>Source_Type__c</columns>
    <columns>Source_Section__c</columns>
    <columns>Internal_Key__c</columns>
    <columns>Is_Editable__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sector__c</field>
        <operation>equals</operation>
        <value>Polymers</value>
    </filters>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Op Plan</value>
    </filters>
    <label>Polymers - Op Plan</label>
</ListView>